--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "author": "Luis Gaviria",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
-        "mongoose": "^5.9.6"
+        "mongoose": "^5.9.6",
+        "mongoose-unique-validator": "^2.0.3"
     }
 }
